--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
 .logo { 
     display: flex; 
     padding: 1rem; 
+    padding-left: 2rem;
     text-decoration: none; 
     color: rgba(255, 255, 255, 100%); 
 } 
@@ -41,6 +42,11 @@ body {
     background: rgb(255, 255, 232); 
     color: rgb(128, 0, 255); 
     border-radius: 6rem; 
+} 
+
+#flex { 
+    display: inline-flex;
+    justify content: space-between
 } 
  
 .section { 
@@ -75,4 +81,4 @@ h1 {
  
 p { 
     font-size: 18px; 
-
+}
